<resources>
    <string name="app_name">Beach Volleyball</string>
    <string name="photo_init_txt">Take a picture of the match!"</string>
    <string name="photo_btn">Shoot!</string>
    <string name="photo_success">Nice pic!\nSaved in your photos.</string>
    <string name="photo_fail">Oups... try later!</string>
    <string name="lang">English</string>
    <string name="match">Match Photo</string>
    <string name="address">Address</string>
    <string name="fourHits">Four Hits</string>
    <string name="serviceOrder">Service Order</string>
    <string name="assistedHitLan">Assisted Hit</string>
    <string name="doubleContactLan">Double Contact</string>
    <string name="catchLiftLan">Catch / Lift</string>
    <string name="footLan">Foot</string>
    <string name="netTouchLan">Net Touch</string>
    <string name="assistedHit">A.H.</string>
    <string name="doubleContact">D.C.</string>
    <string name="catchLift">C./L.</string>
    <string name="foot">F.</string>
    <string name="netTouch">N.T.</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="teamAwins">Team A Wins</string>
    <string name="teamBwins">Team B Wins</string>
    <string name="score">Score</string>
    <string name="faultsPlayer">Faults per Player</string>
    <string name="faultsTeam">Faults per Team</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="fault">Fault</string>
    <string name="yourLocation">You are here</string>
    <string name="pointsPerSet">Points per Set</string>
    <string name="matchBtn">Match Finder</string>
    <string name="registerBtn">Register Data</string>
    <string name="statsBtn">Stats</string>

</resources>
