<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Photos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/takePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dispatchTakePictureIntent"
            android:text="@string/photo_btn" />

        <Switch
            android:id="@+id/lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang" />

        <TextView
            android:id="@+id/photoMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_init_txt" />

        <ImageView
            android:id="@+id/matchPhoto"
            android:layout_width="316dp"
            android:layout_height="287dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/match"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>